rewritten with build spec file for pyinstaller

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
+#windows
 Lib
 Scripts
 /**/*.cfg
 /**/__pycache__
+
+#linux
+bin
+bin64
+include
+share
+build
+dist
+lib64
+
+#misc
 .env
+/**/*.xls
+/**/*.xlsx
+/**/*.cfg
